--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+ul {
+  list-style: none;
+}
+
+li {
+  list-style: none;
+}
+
+.container-fluid {
+  display: inline-flex;
+  justify-content: space-evenly;
+  border: #282c34 solid 1px;
+  margin-bottom: 40px;
+  background-color: whitesmoke;
+}
